0.10.0 (2015-??-??)
===================


0.10.0b2 (2015-11-20)
=====================

Backwards Incompatibilities
---------------------------

* `DecoderRunner` interface changed `SetSendFailure` to `SetFailureHandling`.

Features
--------

* Allow TcpOutput to re-establish the connection after a configurable number
  of successfully delivered messages.

* Added `set_hostname` option to UdpInput configuration (#1668).

* Added `linux_netdev` and `linux_netstat` decoders (#1712).

* Improved error output for ElasticSearchOutput HTTP failures.

* Added `log_decode_failures` config value to decoders.

* Adder `log_flags` to hekad config, to control the prefix for STDOUT and
  STDERR logs.

Bug Handling
------------

* Fixed issue where ElasticSearchOutput was trying to send zero length requests
  (#1783).

* Fixed race condition in ElasticSearchOutput (#1786).

* AMQPInput `Run` method now returns an error when the input channel closes but
  `Stop` hasn't been called to successfully trigger restarts (#1757).

* Fixed error where restarting plugins were losing specified configuration
  (#1756).

* Fixed config error where global `max_pack_idle` setting was the wrong type
  and was being ignored (#1778).

* Fixed race condition in InputRunner's default deliverer initialization.

* Set hostname correctly in the Graylog decoder (#1663).

* Add sample rate support for gauge type in StatsdInput.

* Fixed some cases where SandboxDecoder wasn't correctly setting
  `pack.TrustMsgBytes` to false when needed.

* Fixed broken queue rolling and added test.

* Force ElasticSearch index name to lower case, as required by ElasticSearch.

* Fixed default buffer config values.

* Updated docker configuration so docker build works again (#1634).

* Add generic json lua sandbox decoder (#1651).

* Fixed bug where a SandboxInput configured with a `ticker_interval` would
  get stuck in an infinite loop on shutdown (#1705).
